--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/maxx-t/chainpoint2ots#readme",
   "dependencies": {
+    "bcoin": "^1.0.0-beta.15",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-async-errors": "^2.1.2",
