--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "homepage": "https://github.com/maxx-t/chainpoint2ots#readme",
   "dependencies": {
     "bcoin": "^1.0.2",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "javascript-opentimestamps": "^0.4.3",
-    "request-promise": "^4.2.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "opentimestamps": "^0.4.8",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.20.0"
   },
   "repository": {
     "type": "git",
